...
          disabled={!activeOutfit || pinOutfit === 'generating'}
          loading={activeSaveState === 'saving'}
          trailing={
            pinOutfit === 'generating' ? (
              <DotsLoader
                color={theme.colors.figmaAction}
                testID="home-wear-this-generating-spinner"
              />
            ) : (
              <IconHomeHeartOutline width={24} height={24} />
            )
          }
          style={styles.primaryActionFull}
...
