...
}: HomeHeaderProps) => {
  const { t } = useTranslation();

  return (
    <View style={styles.header}>
      <TopIconButton
        testID="home-menu-button"
        accessibilityRole="button"
        accessibilityLabel={t('home.a11y_open_menu')}
        onPress={onOpenMenu}
        icon={<IconMenu width={24} height={24} />}
        style={styles.headerIconButton}
      />
...
